# ml-implementations

./: .gitignore  README.md  __init__.py  helpers.py  hooks.py  pyproject.toml  requirements.txt  utils.py
alibi/: attention.py  model.py  transformer_block.py
arithmetic/: basic_train.py  config.py  hf_train.py  model.py  synthetic_data.py
dora/: dora.py  lora.py  wrapper.py
general/: __init__.py  activations.py  basic-ffn.py  basic_ffn.py  character_level_tokenizer.py  confi_ffn.py  ensemble.py  flatten.py  linear.py  norms.py  sigmoid_ffn.py  swiglu_ffn.py
gpt/: attention.py  beams.py  cached_attention.py  config.py  cross_attention.py  deepnorm_transformer_block.py  enc_dec_transformer_block.py  group_query_attention.py  model.py  sampling.py  transformer_block.py
gpt2/: attention.py  model.py  transformer_block.py
mamba/: attention_plots.py  config.py  hf_model.py  interp.py  interp_v1.py  jaden_attention.py  mamba_block.py  model.py  s6.py
mixture_of_experts/: cache.py  config.py  convert_hf_models.py  expert_choice_layer.py  experts.py  interp.py  model.py  moe_block.py  routers.py  tiny_stories.py  topk_expert_layer.py  train.py  train_ds.py
moet_experiment/: alibi_confi_block.py  group_moe_layer.py  hf_model.py  hf_train.py  model.py  moe_blocks.py  moet_config.py  train.py
one_wide_moe/: README.md  one_wide_config.py  regular_dense_model.py  shared_moe_model.py  shared_params_dense_model.py  skinny_shared_params.py
optimisers/: adam.py  sgd.py  sophia.py
ponder/: model.py  train.py
resnet/: conv.py  model.py  pad.py  pool.py  res_blocks.py  (+1 more)
(+67 files in other folders)
