[tool.poetry]
name = "ml-replications"
version = "0.1.0"
description = "Some useful ML utils, implementations for experiments and paper replications for learning"
authors = ["Kola Ayonrinde <koayon@gmail.com>"]
readme = "README.md"

packages = [
    # { include = "adatape" },
    { include = "alibi" },
    { include = "arithmetic" },
    { include = "dora"},
    { include = "general"},
    { include = "gpt"},
    { include = "mamba"},
    { include = "mixture_of_experts"},
    { include = "moet_experiment"},
    { include = "one_wide_moe"},
    { include = "optimisers"},
    { include = "ponder"},
    { include = "resnet"},
    # { include = "retention"},
    { include = "rl"},
    # { include = "roe"},
    { include = "soft_moe"},
    { include = "superposition"},
    { include = "tokeniser"}
]


[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.22.0"
datasets = "2.14.4"
deepspeed = "0.10.1"
einops = "0.6.1"
evaluate = "0.4.0"
fancy-einsum = "0.0.3"
jaxtyping = "0.2.19"
joblib = "1.3.2"
numpy = "1.26.4"
pandas = "2.1.0"
plotly = "5.16.1"
pytest = "7.4.0"
tensorboardx = "2.6.2.2"
tiktoken = "0.4.0"
torch = "^2.2.0"
torchvision = "0.17.0"
transformers = "4.32.1"
wandb = "0.15.9"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
